eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx
  rules:
  - host: "api.cyrder.me"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80

  tls:
  - hosts:
    - api.cyrder.me
    secretName: simple-bank-api-cert
